initial task extraction impl